--- a/app/globals.css
+++ b/app/globals.css
@@ -121,3 +121,37 @@ body {
   }
 }
 
+
+/* =================== Loading skeleton start =================== */
+.skeleton {
+  position: relative;
+  overflow: hidden;
+  background-color: #0a2955;
+  background-color: rgb(44 51 63 / 1);
+}
+
+.skeleton::after {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  transform: translateX(-100%);
+  background-image: linear-gradient(
+    90deg,
+    rgba(111, 119, 131, 0) 0,
+    rgba(143, 132, 132, 0) 20%,
+    rgba(126, 139, 151, 0.5) 60%,
+    rgba(25, 55, 99, 0)
+  );
+  animation: shimmer 0.9s infinite;
+  content: "";
+}
+
+@keyframes shimmer {
+  100% {
+    transform: translateX(100%);
+  }
+}
+/* =================== Loading skeleton End =================== */
+
